feat: Refactor schema and add media migration
This commit introduces a major refactoring of the Convex schema to improve data integrity and prepare for future development.

Key changes include:
- Makes all platform URL fields optional and removes "N/A" as a stored value.
- Introduces a new unified `media` array that requires `altText` and `sceneDescription` for all assets, improving accessibility and metadata.
- Deprecates legacy `imagePolished`, `screenshots`, `gifs`, and `videoUrls` fields, which will be removed after data is migrated.
- Adds a new `migrateLegacyToMedia.ts` script to backfill data from legacy arrays into the new `media` field.
- Implements strict validation rules in `convex/products.ts` with new `create` and `update` mutations to enforce the new schema.
- Updates `randomize` and `batchRandomize` scripts to align with the new data model and validation.
- Updates all documentation (`README.md`, `GEMINI.md`) to reflect the new schema and migration plan.

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^16.6.1",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.2.1"
   }
 }
