feat: integrate next.js auth

--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth/core": "^0.40.0",
+    "@auth/nextjs": "^0.0.0-380f8d56",
+    "@convex-dev/auth": "^0.0.88",
     "convex": "^1.25.4",
     "dotenv": "^16.6.1",
+    "next": "^15.4.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   },
