chore: standardize package scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "codegen": "convex codegen",
+    "typecheck": "tsc --noEmit",
+    "test": "echo \"(no tests)\" && exit 0",
     "insert": "npx convex run actions:insertMockData"
   },
   "keywords": [],
