Use NEXT_PUBLIC_CONVEX_URL for client config

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
 # Deployment used by `npx convex dev`
 CONVEX_DEPLOYMENT=dev:polite-panther-3 # team: tankiso-mpela, project: tabkiso-mpela
 
-CONVEX_URL=https://polite-panther-3.convex.cloud
+NEXT_PUBLIC_CONVEX_URL=https://polite-panther-3.convex.cloud
