--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "codegen": "convex codegen",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"(no tests)\" && exit 0"
+    "test": "npm run typecheck"
   },
   "keywords": [],
   "author": "",
