Sanity check + deploy readiness fixes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_CONVEX_URL=<your convex url>
 # Optional: enable stats collection
 RANDOMIZER_STATS=0
+# Optional: basic auth password for /products in production
+ADMIN_PASSWORD=
